@@ -4,6 +4,8 @@
 
 == densha - 0.9.18    not yet released
 
+- todo  #20221 : using the actual process representation for /process and
+                 /workitem, not the definition as launched
 - todo  #20165 : refactored around filter_fields in the workitem controller
 - todo  #20146 : calling workitems() without args yields all workitems 
                  accessible to the user
